--- a/mod2_solution/css/stylesheet.css
+++ b/mod2_solution/css/stylesheet.css
@@ -9,9 +9,9 @@ h1 {
 }
 
 #section1 {
-    border: 5px;
+    border: 5px solid black;
     margin: 5px;
-    /*padding:*/
+    padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
 }
