--- a/mod2_solution/css/stylesheet.css
+++ b/mod2_solution/css/stylesheet.css
@@ -10,18 +10,25 @@ h1 {
 
 #section1 {
     border: 5px solid black;
-    margin: 5px;
+    margin: 20px;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
+    background-color: #5A5A5A;
 }
 
 #section2 {
+    margin: 20px;
+    padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
+    background-color: #5A5A5A;
 }
 
 #section3 {
+    margin: 20px;
+    padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
+    background-color: #5A5A5A;
 }
