--- a/mod2_solution/css/stylesheet.css
+++ b/mod2_solution/css/stylesheet.css
@@ -6,31 +6,34 @@
 
 h1 {
     font-size: 175%;
+    text-align: center;
 }
 
 #section1 {
-    border: 5px solid black;
+    border: 2px solid black;
     margin: 20px;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    background-color: #5A5A5A;
+    background-color: #a7a4a4;
 }
 
 #section2 {
+    border: 2px solid black;
     margin: 20px;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    background-color: #5A5A5A;
+    background-color: #a7a4a4;
 }
 
 #section3 {
+    border: 2px solid black;
     margin: 20px;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    background-color: #5A5A5A;
+    background-color: #a7a4a4;
 }
 
 /* Responsive Design Framework*/
